--- a/index.html
+++ b/index.html
@@ -130,6 +130,40 @@
             </div>
           </div>
         </div>
+        <!--  -->
+
+        <div class="projects-card section">
+          <img
+            class="projects-card__img lazy-img"
+            src="img/weatherApp-lazy.png"
+            data-src="img/weatherApp.png"
+            alt="weatherApp"
+          />
+          <div class="column">
+            <h2 class="projects-card__name">WEATHER APPLICATION</h2>
+            <p class="projects__description">
+              I developed an app requesting location access upon opening. Once
+              granted, it provides real-time weather for your current location.
+              Additionally, you can input any location for weather details. The
+              top displays today's forecast, while the bottom shows updates
+              every 3 hours
+            </p>
+            <div class="project_buttons">
+              <a
+                href="https://weather-app-betul.netlify.app/"
+                class="projects-card__btn"
+                >Live</a
+              >
+              <a
+                href="https://github.com/BetulBuyukzengin/weatherApp"
+                class="projects-card__btn"
+                >Github</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <!--  -->
         <div class="projects-card section">
           <img
             class="projects-card__img lazy-img"
