--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
           <li class="about-skill">JAVASCRIPT</li>
           <li class="about-skill">NPM</li>
           <li class="about-skill">OOP</li>
+          <li class="about-skill">REACT JS</li>
+          <li class="about-skill">Material UI</li>
         </ul>
       </div>
       <div class="about-text">
