--- a/index.html
+++ b/index.html
@@ -66,10 +66,14 @@
       <div class="about-text">
         <h2 class="about-text__heading">ABOUT</h2>
         <p class="about-text__paragraphy">
-          Hello, I am Betül. I am a graduate of Kütahya Dumlupınar University
-          Computer Engineering.<br />I develop projects with the knowledge and
-          experience I have gained so far. I want to continue my career in the
-          field of Frontend Developer and become an expert in this field.
+         Hello, I am Betül. I am a graduate of Kütahya Dumlupınar University Computer Engineering.
+         I develop projects with the knowledge and experience I have gained so far. 
+         I use basic technologies such as HTML, CSS, JavaScript and React JS when creating my projects.
+         I use useReducer and Context API to strengthen data management in my React projects.
+         When creating interfaces, I use libraries such as Material UI, Bootstrap, Bulma.io to give my projects a modern and user-friendly design. 
+         I manage my projects effectively by using tools such as Git and npm during my development process.
+         My goal is to gain new experiences through each project and continue my development.
+         I want to continue my career in the field of Frontend Developer and become an expert in this field.
         </p>
       </div>
     </div>
