new project added

--- a/index.html
+++ b/index.html
@@ -168,7 +168,36 @@
             </div>
           </div>
         </div>
-
+  <div class="projects-card section">
+          <img
+            class="projects-card__img lazy-img"
+            src="img/todo-lazy.png"
+            data-src="img/todo.png"
+            alt="todo"
+          />
+          <div class="column">
+            <h2 class="projects-card__name">TODO LIST</h2>
+            <p class="projects__description">
+              I chose the Material UI library for the user-friendly interface and thus gave the application a modern and stylish look.
+              I made the application more modular and sustainable by using useReducer and Context API to strengthen data management. 
+              I provided an aesthetic and user-friendly experience by using the rich components offered by Material UI in the user interface design.
+              In addition to basic features such as adding, deleting and editing Todo, I also added advanced functions such as filtering completed tasks
+              and sorting by date and alphabet.
+            </p>
+            <div class="project_buttons">
+              <a
+                href="https://lnkd.in/djX8FFSc"
+                class="projects-card__btn"
+                >Live</a
+              >
+              <a
+                href="https://lnkd.in/dQP3DjtF"
+                class="projects-card__btn"
+                >Github</a
+              >
+            </div>
+          </div>
+        </div>
         <!--  -->
         <div class="projects-card section">
           <img
