--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
   <div class="projects-card section">
           <img
             class="projects-card__img lazy-img"
-            src="img/todo-lazy.png"
-            data-src="img/todo.png"
+            src="img/todolist-lazy.png"
+            data-src="img/todolist.png"
             alt="todo"
           />
           <div class="column">
