--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
           <div class="column">
             <h2 class="projects-card__name">TODO LIST</h2>
             <p class="projects__description">
-              I chose the Material UI library for the user-friendly interface and thus gave the application a modern and stylish look.
-              I made the application more modular and sustainable by using useReducer and Context API to strengthen data management. 
-              I provided an aesthetic and user-friendly experience by using the rich components offered by Material UI in the user interface design.
-              In addition to basic features such as adding, deleting and editing Todo, I also added advanced functions such as filtering completed tasks
-              and sorting by date and alphabet.
+              I enhanced the application's user interface by leveraging the Material UI library for a modern and stylish look. 
+              To ensure modularity and sustainability, I implemented the useReducer and Context API for robust data management. 
+              The use of Material UI's rich components not only contributed to an aesthetically pleasing design but also offered a user-friendly experience. 
+              Beyond fundamental features like adding, deleting, and editing Todos,
+              I incorporated advanced functionalities such as filtering completed tasks and sorting options by date and alphabet.
             </p>
             <div class="project_buttons">
               <a
