--- a/index.html
+++ b/index.html
@@ -178,11 +178,9 @@
           <div class="column">
             <h2 class="projects-card__name">TODO LIST</h2>
             <p class="projects__description">
-              I enhanced the application's user interface by leveraging the Material UI library for a modern and stylish look. 
-              To ensure modularity and sustainability, I implemented the useReducer and Context API for robust data management. 
-              The use of Material UI's rich components not only contributed to an aesthetically pleasing design but also offered a user-friendly experience. 
-              Beyond fundamental features like adding, deleting, and editing Todos,
-              I incorporated advanced functionalities such as filtering completed tasks and sorting options by date and alphabet.
+              I utilized Material UI for a modern interface, making the app modular with useReducer and Context API for data management. 
+              The aesthetic design features Material UI components, offering a user-friendly experience.
+              Advanced functionalities include filtering completed tasks and sorting by date/alphabet.
             </p>
             <div class="project_buttons">
               <a
